fix: heroku deployment view update

--- a/views/index.html
+++ b/views/index.html
@@ -32,6 +32,7 @@
         ws.onerror = function (e) {
             console.log(e);
         };
+        // Set focus in the terminal
         document.getElementsByClassName("xterm-helper-textarea")[0].focus();
     </script>
 </body>
