--- a/views/layout.html
+++ b/views/layout.html
@@ -87,6 +87,10 @@
         .xterm .xterm-helpers {
             position: absolute;
             top: 0;
+            /**
+        * The z-index of the helpers must be higher than the canvases in order for
+        * IMEs to appear on top.
+        */
             z-index: 5;
         }
 
@@ -94,6 +98,7 @@
             padding: 0;
             border: 0;
             margin: 0;
+            /* Move textarea out of the screen to the far left, so that the cursor is not visible */
             position: absolute;
             opacity: 0;
             left: -9999em;
@@ -101,12 +106,14 @@
             width: 0;
             height: 0;
             z-index: -5;
+            /** Prevent wrapping so the IME appears against the textarea at the correct position */
             white-space: nowrap;
             overflow: hidden;
             resize: none;
         }
 
         .xterm .composition-view {
+            /* TODO: Composition position got messed up somewhere */
             background: #000;
             color: #FFF;
             display: none;
@@ -120,6 +127,7 @@
         }
 
         .xterm .xterm-viewport {
+            /* On OS X this is required in order for the scroll bar to appear fully opaque */
             background-color: #000;
             overflow-y: scroll;
             cursor: default;
@@ -160,6 +168,7 @@
         }
 
         .xterm.enable-mouse-events {
+            /* When mouse events are enabled (eg. tmux), revert to the standard pointer cursor */
             cursor: default;
         }
 
@@ -168,6 +177,7 @@
         }
 
         .xterm.column-select.focus {
+            /* Column selection mode */
             cursor: crosshair;
         }
 
