fix(ally): upadated contrast errors from wave output for a11y

--- a/views/layout.html
+++ b/views/layout.html
@@ -40,19 +40,19 @@
         .restart-button {
             width: 180px;
             height: 40px;
-            background-color: #079505;
-            color: #FFFFFF;
+            background-color: #006400;
+            color: #f3efef;
             text-transform: uppercase;
             border-radius: 8px;
             cursor: pointer;
         }
 
         .restart-button:hover {
-            background-color: #b71800;
+            background-color: #8B0000;
         }
 
         .restart-button:focus {
-            outline: 3px solid #9d0078; 
+            outline: 3px solid #F5F5F5; 
         }
 
         .footer {
